--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "cordova-plugin-whitelist": "^1.3.3",
         "d3": "^4.13.0",
         "d3-cloud": "^1.2.5",
+        "d3-scale-chromatic": "^1.2.0",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
         "rxjs": "5.5.2",
