--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
         "@ionic-native/core": "4.4.0",
+        "@ionic-native/geolocation": "^4.5.3",
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
         "@ionic/storage": "2.1.3",
         "@types/d3": "^5.0.0",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-compat": "^1.2.0",
         "cordova-plugin-device": "^2.0.1",
+        "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^1.1.16",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -54,7 +57,10 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": " "
+            }
         },
         "platforms": [
             "android",
